Fixed overflow issue

--- a/src/js/pages/App.scss
+++ b/src/js/pages/App.scss
@@ -1,7 +1,7 @@
 .root {
   flex: 1 0 100%;
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: 100vw;
   grid-template-rows: 100vh;
   grid-template-areas: "full";
   font-size: 16px;
